--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "google-speech": "0.0.5",
     "watson-developer-cloud": "^2.31.1"
   }
 }
