--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "google-speech": "0.0.5",
+    "jquery": "^3.2.1",
     "syllable": "^2.0.0",
     "watson-developer-cloud": "^2.31.1"
   }
