--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.2.1",
     "jsdom": "^10.1.0",
     "syllable": "^2.0.0",
-    "watson-developer-cloud": "^2.31.1"
+    "watson-developer-cloud": "^2.31.1",
+    "xml2json": "^0.11.0"
   }
 }
