--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsdom": "^10.1.0",
     "syllable": "^2.0.0",
     "watson-developer-cloud": "^2.31.1",
+    "xml2js": "^0.4.17",
     "xml2json": "^0.11.0"
   }
 }
